# TDT4172

./: pyproject.toml
assignment_1/: Chapter_1.html  Chapter_1.ipynb  linear_regression.py  logistic_regression.py
assignment_1/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
assignment_1/catboost_info/learn/: events.out.tfevents
